Add login verification